# PAGpr

./: CMakeLists.txt  Camera.cpp  Camera.h  Luz.cpp  Luz.h  ModeloOBJ.cpp  ModeloOBJ.h  README.md  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  UML.puml  conandata.yml  lodepng.cpp  lodepng.h  main.cpp  pag03-fs.glsl  pag03-vs.glsl
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
